cabal-version:      3.0
name:               horch
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Patrick Chilton
maintainer:         chpatrick@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Horch,
                      Horch.Types,
                      Horch.Parser,
                      Horch.CodeGen,
                      Horch.Util,
                      Horch.Context
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      inline-c,
                      inline-c-cpp,
                      primitive,
                      containers,
                      vector,
                      megaparsec,
                      yaml,
                      text,
                      template-haskell,
                      filepath,
                      mtl
    pkgconfig-depends: libtorch
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -Werror=incomplete-patterns
    cc-options: -std=c++20